--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://vikasgond807.github.io/React-helpapp",
+  "homepage": "http://vikasgond807.github.io/React-helpapp",
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
@@ -8,6 +8,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "dev": "vite",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
